code debeugged