@@ -1,14 +1,21 @@
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.fs.FSDataInputStream;
-import org.apache.hadoop.fs.FSDataOutputStream;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 
-
+/**
+ * this class deals with the reads and writes from the hdfs
+ * @author khalilhajji
+ *
+ */
 public class FileSystemHandler {
 
 	/**
@@ -26,11 +33,11 @@ public class FileSystemHandler {
 			Path path = new Path(fileName);
 			FileSystem fs = getFileSystem();
 			fs.create(path, true);
-			
-			FSDataOutputStream outputStream = fs.create(path);
-			
 
-			
+			//	FSDataOutputStream outputStream = fs.create(path);
+			BufferedWriter br=new BufferedWriter(new OutputStreamWriter(fs.create(path,true)));
+
+
 			String line ="";
 			for (int i = 0; i < matrix.length; i++) {
 				for (int j = 0; j < matrix[0].length; j++) {
@@ -38,16 +45,16 @@ public class FileSystemHandler {
 
 				}
 				//remove the last space
-				//line = line.substring(0, line.length()-1);
+				line = line.substring(0, line.length()-1);
 				//add the line jump
-				
-				
 				line=line+"\n";
-				outputStream.writeChars(line);
+				//	outputStream.writeChars(line);
+				br.write(line);
 				line = "";
-				
+
 			}
-			outputStream.close();
+			//outputStream.close();
+			br.close();
 
 
 		} catch (FileNotFoundException e) {
@@ -66,11 +73,11 @@ public class FileSystemHandler {
 			Path path = new Path(fileName);
 			FileSystem fs = getFileSystem();
 			fs.create(path, true);
-			
-			FSDataOutputStream outputStream = fs.create(path);
-			
 
-			
+			//	FSDataOutputStream outputStream = fs.create(path);
+			BufferedWriter br=new BufferedWriter(new OutputStreamWriter(fs.create(path,true)));
+
+
 			String line ="";
 			for (int i = 0; i < vector.length; i++) {
 
@@ -79,10 +86,10 @@ public class FileSystemHandler {
 			}
 			//remove the last space
 			line = line.substring(0, line.length()-1);
-			
-			outputStream.writeChars(line);
-			outputStream.close();
-
+			br.write(line);
+			//outputStream.writeChars(line);
+			//outputStream.close();
+			br.close();
 
 
 
@@ -97,77 +104,103 @@ public class FileSystemHandler {
 
 
 	}
+
+	public static void deletePath(String fileName){
+		try {
+			FileSystem fs = getFileSystem();
+			fs.delete(new Path(fileName),true);
+
+
+		} catch (IOException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+
+	}
+
 	
 	/**
 	 * takes the output of the reducers and generate the gamma file, the lambda file and the gradient file
 	 * in the good format
+	 * @param pathJobOutput
+	 * @param pathToLambda
+	 * @param pathToGamma
+	 * @param pathToGradient
 	 */
-	public static void generateLambdaGammaGradient() {
+	public static void convertJobOutputToLambdaGammaGradient(String pathJobOutput, String pathToLambda, String pathToGamma, String pathToGradient) {
 		//the lambda matrix that will be constituted
-		double[][]lambda = new double[Parameters.numberOfTopics][Parameters.sizeOfVocabulary];
-		
-		
+		double[][]lambda = new double[Parameters.sizeOfVocabulary][Parameters.numberOfTopics];
+
+
 		//the gamma matrix that will be constituted
 		double[][] gamma = new double [Parameters.numberOfDocuments][Parameters.numberOfTopics];
-		
+
 		//may be needed if we find some keys with value -1;
 		double[] delta = new double [Parameters.numberOfTopics];
 
-		
+
 		//go throught all the files of the directory
-		File folder = new File(Parameters.pathReducerOutput);
+		File folder = new File(pathJobOutput);
 		File[] listOfFiles = folder.listFiles();
 
 		for (int i = 0; i < listOfFiles.length; i++) {
 			//for each file read all the values and put them in the matrix
 			String fileName = listOfFiles[i].getPath();
+			System.out.println("file names in our methods : " + fileName);
+			if(!fileName.contains("_SUCESS") && !fileName.contains("crc")){
+				System.out.println("We are reading the files.");
 
 
-			try {
-				FileSystem fs = getFileSystem();
+				try {
+					System.out.println("We are trying.");
+					FileSystem fs = getFileSystem();
 
-				FSDataInputStream inputStream = fs.open(new Path(fileName));
+					
+					BufferedReader br=new BufferedReader(new InputStreamReader(fs.open(new Path(fileName))));
+					String line = br.readLine();
 
-				String line = inputStream.readLine();
 
-				
+					while (line != null) {
+						System.out.println(line);
+						String[] stringArray = line.split(",|\\s");
+						for(int i1 = 0; i1 < stringArray.length; i1 ++){
+							System.out.println(stringArray[i1]);
+						}
+						int keyType = new Integer(stringArray[0]);
+						if(keyType == 1) {
+							//then it is the lambda
+							lambda[new Integer(stringArray[2])][new Integer(stringArray[1])]= new Double(stringArray[3]);
+						} else if(keyType == 2) {
+							//then it is the delta
+							delta[new Integer(stringArray[2])] = new Double(stringArray[2]);
+						} else if(keyType == 3) {
+							//then it is the gamma
+							gamma[new Integer(stringArray[2])][new Integer(stringArray[1])]= new Double(stringArray[3]);
+						}else {
+							//should never be in that branch
+							System.err.println("unexpected branch in FileSystemHandler.generateLambdaGammaGradient()");
+						}
+						line=br.readLine();
 
-				while (line != null) {
-					String[] stringArray = line.split(",|\\s");
-					int keyType = new Integer(stringArray[0]);
-					if(keyType == 1) {
-						//then it is the lambda
-						lambda[new Integer(stringArray[1])][new Integer(stringArray[2])]= new Double(stringArray[3]);
-					} else if(keyType == 2) {
-						//then it is the delta
-						delta[new Integer(stringArray[2])] = new Double(stringArray[2]);
-					} else if(keyType == 3) {
-						//then it is the gamma
-						gamma[new Integer(stringArray[1])][new Integer(stringArray[2])]= new Double(stringArray[3]);
-					}else {
-						//should never be in that branch
-						System.err.println("unexpected branch in FileSystemHandler.generateLambdaGammaGradient()");
 					}
 
+					//do the write
+					writeMatrix(pathToLambda, lambda);
+
+					writeVector(pathToGradient, delta);
+
+					writeMatrix(pathToGamma, gamma);
+
+
+				} catch (FileNotFoundException e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+				} catch (IOException e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+
 				}
-
-				//do the write
-				writeMatrix(Parameters.pathToLambdas, lambda);
-				
-				writeVector(Parameters.pathToGradient, delta);
-				
-				writeMatrix(Parameters.pathToGammas, gamma);
-				
-
-			} catch (FileNotFoundException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			} catch (IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-
 			}
-
 
 		}
 	}
@@ -178,7 +211,7 @@ public class FileSystemHandler {
 	}
 
 	public static double[][] loadLambdas(String fileName){
-		double[][] lambdas = loadMatrix(fileName, Parameters.numberOfTopics, Parameters.sizeOfVocabulary);
+		double[][] lambdas = loadMatrix(fileName, Parameters.sizeOfVocabulary, Parameters.numberOfTopics);
 		return lambdas;
 	}
 
@@ -193,12 +226,13 @@ public class FileSystemHandler {
 	}
 
 	private static double[] loadVector(String fileName, int size){
+		BufferedReader br;
 		try {
 			FileSystem fs = getFileSystem();
 
-			FSDataInputStream inputStream = fs.open(new Path(fileName));
+			br=new BufferedReader(new InputStreamReader(fs.open(new Path(fileName))));
 
-			String line = inputStream.readLine();
+			String line=br.readLine();
 
 			double[]vector = new double[size];
 
@@ -209,7 +243,7 @@ public class FileSystemHandler {
 				vector[i] = new Double(stringArray[i]);
 			}
 
-			inputStream.close();
+			br.close();
 			return vector;
 
 		} catch (FileNotFoundException e) {
@@ -231,35 +265,43 @@ public class FileSystemHandler {
 	}
 
 	private static double[][] loadMatrix(String fileName, int sizeRows, int sizeColumns) {
-
+		BufferedReader br;
 		try {
 			FileSystem fs = getFileSystem();
 
-			FSDataInputStream inputStream = fs.open(new Path(fileName));
+			br=new BufferedReader(new InputStreamReader(fs.open(new Path(fileName))));
 
-			String line = inputStream.readLine();
+			String line=br.readLine();
+			System.out.println("We have succesfully read the line." + line);
 
 			double[][] matrix = new double[sizeRows][sizeColumns];
 			int ind = 0;
 			while (line != null) {
+				System.out.println("Out line is not null");
+				System.out.println("the line is : " + line );
 				String[] stringArray = line.split(" ");
 				double[] row = new double[sizeColumns];
 
 				for (int i = 0; i < stringArray.length; i++) {
-					row[i] = new Double(stringArray[i]);
+					System.out.println("*"+stringArray[i]+"*");
+					Double val = Double.valueOf(stringArray[i]);
+					row[i] = (double)val;
+					System.out.println("row : " + i + " " + row[i]);
 				}
 
 				matrix[ind] = row;
 				ind++;
 
-				line = inputStream.readLine();
+				line = br.readLine();
+				
 			}
 
 			if (ind != matrix.length) {
+				System.out.println("Problem.");
 				throw new IndexOutOfBoundsException();
 			}
-			inputStream.close();
 
+			br.close();
 			return matrix;
 
 		} catch (FileNotFoundException e) {
@@ -269,18 +311,20 @@ public class FileSystemHandler {
 		} catch (IOException e){
 			// TODO Auto-generated catch block
 			e.printStackTrace();
+
 			return null;
 
 		} catch(IndexOutOfBoundsException e) {
 
 			e.printStackTrace();
+
 			return null;
 
 		}
 
 	}
 
-	
+
 
 	private static FileSystem getFileSystem() throws IOException {
 		return FileSystem.get(new Configuration());
